fix layout bugs in about page, templates page development started

--- a/src/style/partials/about-main.scss
+++ b/src/style/partials/about-main.scss
@@ -1,6 +1,7 @@
 .header-wrapper {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 2em;
     margin-bottom: 3em;
     &__heading {
         font: 3em $medium;
