--- a/src/style/partials/app.scss
+++ b/src/style/partials/app.scss
@@ -29,6 +29,7 @@ body {
     font: normal 16px $light, sans-serif;
     padding: 0;
     /* Margin bottom by footer height */
+    line-height: 1;
     margin: 0 0 5em;
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
