--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -1,4 +1,5 @@
 .navbar {
+    margin-bottom: 0;
     &-nav {
         margin-top: 0;
         margin-bottom: 0;
