--- a/src/style/partials/login.scss
+++ b/src/style/partials/login.scss
@@ -65,6 +65,6 @@
 
 .after-wall-link {
     display: block;
-    margin-top: 10px;
+    margin: 1em auto 3em;
 }
 
